# binwise

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE-CODE  LICENSE-DATA  MAINTAINERS.md  README.md  SCOPE.md  SECURITY.md  pyproject.toml  taxonomy.json
.github/: PULL_REQUEST_TEMPLATE.md  source-hashes.json
.github/ISSUE_TEMPLATE/: dispute.md  missing-city.md
.github/scripts/: source-change-issue.py
.github/workflows/: source-change.yml  validate.yml
cities/us/ca/: san-francisco.json
cities/us/ny/: new-york-city.json
cities/us/wa/: seattle.json
docs/: calrecycle-snapshot-2026-05-04.md
schema/: taxonomy-v0.1.json  v0.1.json
src/binwise/: agent.py  cli.py  rules.py  source_check.py  validate.py  wayback.py  web.py
tests/: test_cli.py  test_smoke.py  test_validator_negative.py
