[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "binwise"
version = "0.1.0"
description = "Point your camera at trash. Get a verdict."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0,<2.0",
    "click>=8.1,<9.0",
    "fastapi>=0.110,<1.0",
    "jsonschema>=4.21,<5.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
binwise = "binwise.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["cities", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/binwise/web.py" = ["B008"]
